feat(i18n): add error messages for duplicate inbound and outbound routes in German and English
feat(billing): replace Snackbar with reusable Toast component for notifications

feat(dashboard): enhance live registration count logic and improve gateway status display

refactor(routes): implement duplicate route checks for inbound and outbound routes, update API calls accordingly

refactor(pages): replace Snackbar with Toast component across various pages for consistent notification handling

feat(preferences): add sidebarCollapsed preference to user settings

docs(project): add comprehensive project overview, tech stack, navigation structure, and key features

feat(toast): create reusable Toast component for displaying alerts with auto-hide functionality

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -234,6 +234,8 @@
     "type_inbound": "Eingehend",
     "type_outbound": "Ausgehend",
     "error_duplicate": "Diese Route existiert bereits (gleiche Nebenstelle, Gateway und Richtung)",
+    "error_duplicate_inbound": "Diese Nebenstelle hat bereits eine eingehende Route",
+    "error_duplicate_outbound": "Dieser Benutzer hat bereits eine ausgehende Route",
     "error_license_limit": "Lizenzlimit erreicht. Deaktivieren Sie andere Routen oder erwerben Sie zus\u00e4tzliche Lizenzen."
   },
   "modal": {
